<resources>
    <string name="app_name">RecipeSearchApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="go_to_login">Go To LogIn</string>
    <string name="search_your_food">Search Your Food</string>
    <string name="imagedescription">ImageDescription</string>
    <string name="food_name">Food Name</string>
</resources>